frontend/test/should_fail/index_exec_node_fromIndexFromTo_argument_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:double)
{
	{ i:set<Node>=nodesFromIndexFromTo(fooi, j, 42) }
}
